--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -43,6 +43,15 @@ h1, h2, h3, h4 {
 
 .post {
     margin-bottom: 70px;
+
+}
+
+.post__edit-right {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 10px;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .post h2 a, .post h2 a:visited {
