--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,12 +2,21 @@
 
 {% block content %}
     <div class="post">
-        {% if post.created_date %}
+        <div class="post__edit-right">
+            <div class="border-top">
+                {% if user.is_authenticated %}
+                <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+                {% endif %}
+                {% if post.created_date %}
+            </div>
+            <div class="post__edit-left">
+                <h2>{{ post.title }}</h2>
+            </div>
             <div class="date">
                 {{ post.created_date }}
             </div>
-        {% endif %}
-        <h2>{{ post.title }}</h2>
-        <p>{{ post.text|linebreaksbr }}</p>
+            {% endif %}
+        </div>
     </div>
+    <p>{{ post.text|linebreaksbr }}</p>
 {% endblock %}
